snapshot-tests/tests/snapshots/parser__signed_radix__plus_bin.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-integer]: 
  ┌─ plus_bin:1:5
  │
1 │ a = +0b0
  │     ^^^^ invalid integer: signs are not allowed on prefixed integers
